# advanced_python_learning

./: .gitignore  01_overview.py  context_manager.py  decorators.py  dunder_magic_methods.py  factory_pattern_test.py  generator.py  metaclasses.py  pathlib-tutorial.py  pyproject.toml  python-eval-loop-explained.txt  type_hinting.py
50_advanced_concepts/: 01_static_arrays.py  03_pass_by_reference.py  04_method_resolution_order.py  06_attrgetter.py  08_gil.py  09_concurrency.py  10_multithreading.py  11_multiprocessing.py  12_multiprocessing_race.py  14_collections.py  15_oop_encapsulation.py  16_17_abstraction+ABC.py  18_oop_inheritance.py  20_python_data_model.py  21_22_iterators_generators.py  23_static_and_class_methods.py  24_dependency_injection.py  25_parametrised_tests.py  27_serialisation-deserialisation.py  28_get_state-set_state.py  29_heapq.py  30_higher_order_funcs.py  32_advanced_list_comprehension.py  34_decode_python_bytecode.py  35_memoryview.py
asyncio-tutorial/: example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  real_world_example_v1_sync.py  real_world_example_v3.py  terms.py
itertools-module/: iter-demo.py
lld_udemy_course/: course_notes.md
lld_udemy_course/oop_basics/: basic_principles.py  (+1 more)
logging-example/: employee.py  example.py
pydantic-tutorial/: main.py
pytest-tutorial/: db.py  main.py  test_db.py  test_main.py
sqlalchemy-tutorial/: basics.py  mydatabase.db  sqlalchemy-orm.py
threading-multiprocessing/: multiprocessing_example.py  subprocess_example.py  threading-example.py
