[project]
name = "advanced-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "types-requests>=2.33.0.20260402",
]
